Refactor language mapping reader and added initial support for multiple translators

--- a/experimental_notebooks/add_bing_languages_to_mapping.ipynb
+++ b/experimental_notebooks/add_bing_languages_to_mapping.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "import json\n",
-    "import requests"
+    "import requests\n",
+    "import pandas as pd"
    ],
    "outputs": [],
    "metadata": {}
@@ -132,15 +133,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "source": [
-    "import pandas as pd"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
    "source": [
     "bing_languages = pd.DataFrame(bing_languages, columns=[\"BCP_47\", \"name\"])\n",
@@ -259,15 +251,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "source": [
-    "language_mapping = []\n",
-    "with open('../dataset/mbertlangs.txt') as fp:\n",
-    "    for line in fp.read().splitlines()[1:]:\n",
-    "        if line:\n",
-    "            language_mapping.append(line.split(\"\\t\"))\n",
-    "language_mapping = pd.DataFrame(\n",
-    "    language_mapping, columns=[\"wiki\", \"name\", \"iso\", \"googletranslate\"])\n",
+    "language_mapping = pd.read_csv('../dataset/mbertlangs.txt', sep='\\t')\n",
     "language_mapping"
    ],
    "outputs": [
@@ -279,14 +265,14 @@
        "0     af        Afrikaans      afr              af\n",
        "1     sq         Albanian      sqi              sq\n",
        "2     ar           Arabic  ara,arb              ar\n",
-       "3     an        Aragonese      arg                \n",
+       "3     an        Aragonese      arg             NaN\n",
        "4     hy         Armenian      hye              hy\n",
        "..   ...              ...      ...             ...\n",
        "99    fy     West Frisian      fry              fy\n",
-       "100  pnb  Western Punjabi  pnb,pan                \n",
+       "100  pnb  Western Punjabi  pnb,pan             NaN\n",
        "101   yo           Yoruba      yor              yo\n",
        "102   th             Thai      tha              th\n",
-       "103   mn        Mongolian  mon,khk                \n",
+       "103   mn        Mongolian  mon,khk             NaN\n",
        "\n",
        "[104 rows x 4 columns]"
       ],
@@ -342,7 +328,7 @@
        "      <td>an</td>\n",
        "      <td>Aragonese</td>\n",
        "      <td>arg</td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -370,7 +356,7 @@
        "      <td>pnb</td>\n",
        "      <td>Western Punjabi</td>\n",
        "      <td>pnb,pan</td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>101</th>\n",
@@ -391,7 +377,7 @@
        "      <td>mn</td>\n",
        "      <td>Mongolian</td>\n",
        "      <td>mon,khk</td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -400,7 +386,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 4
     }
    ],
    "metadata": {}
