Add bing translator

--- a/experimental_notebooks/add_bing_languages_to_mapping.ipynb
+++ b/experimental_notebooks/add_bing_languages_to_mapping.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "source": [
     "def get_bing_available_languages():\n",
     "    params = (\n",
@@ -126,7 +126,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 3
     }
    ],
    "metadata": {}
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "source": [
     "language_mapping = pd.read_csv('../dataset/mbertlangs.txt', sep='\\t')\n",
     "language_mapping"
@@ -386,19 +386,18 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 20
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "source": [
     "df_merge = pd.merge(\n",
     "    language_mapping, bing_languages['BCP_47'], left_on='wiki',\n",
     "    right_on='BCP_47', how='left')\n",
-    "df_merge.loc[df_merge['BCP_47'].isnull(), 'BCP_47'] = ''\n",
     "df_merge"
    ],
    "outputs": [
@@ -410,14 +409,14 @@
        "0     af        Afrikaans      afr              af     af\n",
        "1     sq         Albanian      sqi              sq     sq\n",
        "2     ar           Arabic  ara,arb              ar     ar\n",
-       "3     an        Aragonese      arg                       \n",
+       "3     an        Aragonese      arg             NaN    NaN\n",
        "4     hy         Armenian      hye              hy     hy\n",
        "..   ...              ...      ...             ...    ...\n",
-       "99    fy     West Frisian      fry              fy       \n",
-       "100  pnb  Western Punjabi  pnb,pan                       \n",
-       "101   yo           Yoruba      yor              yo       \n",
+       "99    fy     West Frisian      fry              fy    NaN\n",
+       "100  pnb  Western Punjabi  pnb,pan             NaN    NaN\n",
+       "101   yo           Yoruba      yor              yo    NaN\n",
        "102   th             Thai      tha              th     th\n",
-       "103   mn        Mongolian  mon,khk                       \n",
+       "103   mn        Mongolian  mon,khk             NaN    NaN\n",
        "\n",
        "[104 rows x 5 columns]"
       ],
@@ -477,8 +476,8 @@
        "      <td>an</td>\n",
        "      <td>Aragonese</td>\n",
        "      <td>arg</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -502,15 +501,15 @@
        "      <td>West Frisian</td>\n",
        "      <td>fry</td>\n",
        "      <td>fy</td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>100</th>\n",
        "      <td>pnb</td>\n",
        "      <td>Western Punjabi</td>\n",
        "      <td>pnb,pan</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>101</th>\n",
@@ -518,7 +517,7 @@
        "      <td>Yoruba</td>\n",
        "      <td>yor</td>\n",
        "      <td>yo</td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>102</th>\n",
@@ -533,8 +532,8 @@
        "      <td>mn</td>\n",
        "      <td>Mongolian</td>\n",
        "      <td>mon,khk</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -543,14 +542,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 21
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "source": [
     "df_merge.to_csv('../dataset/languages_mapping.txt', sep='\\t', index=False)"
    ],
