Add filtering by minimum number of total phrases

--- a/experimental_notebooks/fix_templates_with_no_metadata.ipynb
+++ b/experimental_notebooks/fix_templates_with_no_metadata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "source": [
     "import os\n",
     "from glob import glob\n",
@@ -133,6 +133,61 @@
      "text": [
       "100%|██████████| 48/48 [00:12<00:00,  3.83it/s]\n",
       "100%|██████████| 5/5 [01:06<00:00, 13.26s/it]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "glob(\"/home/wsr217/mpararel/data/multilingual/pararel_populated_*\")"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['/home/wsr217/mpararel/data/multilingual/pararel_populated_bing',\n",
+       " '/home/wsr217/mpararel/data/multilingual/pararel_populated_opus_mt',\n",
+       " '/home/wsr217/mpararel/data/multilingual/pararel_populated_mbart50_en2m_with_metadata',\n",
+       " '/home/wsr217/mpararel/data/multilingual/pararel_populated_google',\n",
+       " '/home/wsr217/mpararel/data/multilingual/pararel_populated_m2m100_big',\n",
+       " '/home/wsr217/mpararel/data/multilingual/pararel_populated_opus_mt_with_metadata',\n",
+       " '/home/wsr217/mpararel/data/multilingual/pararel_populated_mbart50_en2m',\n",
+       " '/home/wsr217/mpararel/data/multilingual/pararel_populated_m2m100_big_with_metadata',\n",
+       " '/home/wsr217/mpararel/data/multilingual/pararel_populated_bing_with_metadata']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "source": [
+    "pararel_populated_dir = \"/home/wsr217/mpararel/data/multilingual/pararel_populated_google\"\n",
+    "for lang_folder in tqdm(os.listdir(pararel_populated_dir)):\n",
+    "    for relation_file in os.listdir(os.path.join(pararel_populated_dir, lang_folder)):\n",
+    "        out_file = os.path.join(pararel_populated_dir + '_with_metadata', lang_folder, relation_file)\n",
+    "        os.makedirs(out_file[:-len(os.path.basename(out_file))], exist_ok=True)\n",
+    "        with open(os.path.join(pararel_populated_dir, lang_folder, relation_file), 'r') as f_in, \\\n",
+    "            open(out_file, 'w') as f_out:\n",
+    "            for line in f_in:\n",
+    "                if line:\n",
+    "                    template = json.loads(line)\n",
+    "                    f_out.write(\"{}\\n\".format(json.dumps({\"pattern\":template})))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "100%|██████████| 104/104 [00:21<00:00,  4.82it/s]\n"
      ]
     }
    ],
