Fixed small bugs added by the filtering of existing prediction

--- a/experimental_notebooks/compare_mpararel_threshold.ipynb
+++ b/experimental_notebooks/compare_mpararel_threshold.ipynb
@@ -415,11 +415,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "source": [
-    "lang = \"ja\"\n",
+    "lang = \"zh\"\n",
     "relation = \"P17\"\n",
-    "for translation_folder in glob(\"../data/multilingual/pararel_*_fixed\"):\n",
+    "for translation_folder in glob(\"../data/multilingual_logging/pararel_*_fixed\"):\n",
     "    relation_file = os.path.join(translation_folder, lang, relation + \".jsonl\")\n",
     "    print(\">>>\", translation_folder.split('/')[-1])\n",
     "    if os.path.isfile(relation_file):\n",
@@ -435,27 +435,22 @@
      "name": "stdout",
      "text": [
       ">>> pararel_mbart50_en2m_fixed\n",
-      "{'pattern': '[X] は [Y] にあります。', 'lemma': 'is-located', 'extended_lemma': 'is-located', 'tense': 'present'}\n",
-      "{'pattern': '[X] は [Y] に位置します。', 'lemma': 'which-is-located', 'extended_lemma': 'which-is-located', 'tense': 'present'}\n",
-      "{'pattern': '[X]、[Y]に位置します。', 'lemma': 'located', 'extended_lemma': 'located', 'tense': 'present'}\n",
+      "{'pattern': '[X]位于[Y]。', 'lemma': 'is-located', 'extended_lemma': 'is-located', 'tense': 'present'}\n",
+      "{'pattern': '[X],位于[Y]。', 'lemma': 'which-is-located', 'extended_lemma': 'which-is-located', 'tense': 'present'}\n",
+      "{'pattern': '[X],位于[Y]。', 'lemma': 'located', 'extended_lemma': 'located', 'tense': 'present'}\n",
       ">>> pararel_m2m100_big_fixed\n",
-      "{'pattern': '〔x〕は、〔y〕の位置にあります。', 'lemma': 'is-located', 'extended_lemma': 'is-located', 'tense': 'present'}\n",
-      "{'pattern': '所属する所属する所属する所属する所属する所属する所属する所属する所属する所属する所属する所属する所属する所属する所属する所属する所属である。', 'lemma': 'which-is-located', 'extended_lemma': 'which-is-located', 'tense': 'present'}\n",
-      "{'pattern': '地(あめつち)に位置する。', 'lemma': 'located', 'extended_lemma': 'located', 'tense': 'present'}\n",
+      "{'pattern': '', 'lemma': 'is-located', 'extended_lemma': 'is-located', 'tense': 'present'}\n",
+      "{'pattern': '', 'lemma': 'which-is-located', 'extended_lemma': 'which-is-located', 'tense': 'present'}\n",
+      "{'pattern': '', 'lemma': 'located', 'extended_lemma': 'located', 'tense': 'present'}\n",
       ">>> pararel_bing_fixed\n",
-      "{'pattern': '[X] は [Y] にあります。', 'lemma': 'is-located', 'extended_lemma': 'is-located', 'tense': 'present'}\n",
-      "{'pattern': '[X]、yに位置しています。', 'lemma': 'which-is-located', 'extended_lemma': 'which-is-located', 'tense': 'present'}\n",
-      "{'pattern': '[X]、yに位置しています。', 'lemma': 'located', 'extended_lemma': 'located', 'tense': 'present'}\n",
       ">>> pararel_opus_mt_fixed\n",
-      ">>> pararel_populated_m2m100_big_fixed\n",
+      "{'pattern': '[X]位于[Y]。', 'lemma': 'is-located', 'extended_lemma': 'is-located', 'tense': 'present'}\n",
+      "{'pattern': '[X],位于[Y]。', 'lemma': 'which-is-located', 'extended_lemma': 'which-is-located', 'tense': 'present'}\n",
+      "{'pattern': '[X],位于[Y]。', 'lemma': 'located', 'extended_lemma': 'located', 'tense': 'present'}\n",
       ">>> pararel_google_fixed\n",
-      "{'pattern': '[X]は[Y]にあります。', 'lemma': 'is-located', 'extended_lemma': 'is-located', 'tense': 'present'}\n",
-      "{'pattern': '[X]、[Y]にあります。', 'lemma': 'which-is-located', 'extended_lemma': 'which-is-located', 'tense': 'present'}\n",
-      "{'pattern': '[Y]にある[X]。', 'lemma': 'located', 'extended_lemma': 'located', 'tense': 'present'}\n",
-      ">>> pararel_populated_mbart50_en2m_fixed\n",
-      ">>> pararel_populated_opus_mt_fixed\n",
-      ">>> pararel_populated_bing_fixed\n",
-      ">>> pararel_populated_google_fixed\n",
+      "{'pattern': '[X]位于[Y]中。', 'lemma': 'is-located', 'extended_lemma': 'is-located', 'tense': 'present'}\n",
+      "{'pattern': '[X]，位于[Y]。', 'lemma': 'which-is-located', 'extended_lemma': 'which-is-located', 'tense': 'present'}\n",
+      "{'pattern': '[X]，位于[Y]。', 'lemma': 'located', 'extended_lemma': 'located', 'tense': 'present'}\n",
       "\n",
       "\n",
       "\n",
@@ -1707,7 +1702,7 @@
    "display_name": "Python 3.6.8 64-bit ('mpararel-venv': venv)"
   },
   "interpreter": {
-   "hash": "e5b0323cc88f2585e6ae482f2ef813c59755d2e262e36e57d65e5a1385fce157"
+   "hash": "7b00635ec3dadc89d55ed82a60ecbee89d88a1e660533522094ac0dd7657354a"
   }
  },
  "nbformat": 4,
